# recipebrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  recipebrain.toml  setup.py
.github/: copilot-instructions.md
.github/agents/: learning.agent.md
.github/instructions/: memory-management.instructions.md  python.instructions.md
.github/prompts/: analyse.prompt.md  ci.prompt.md  commit.prompt.md  create-issues-from-analysis.prompt.md  dream.prompt.md  e2e-mcp-test.prompt.md  etl-output-analysis.prompt.md  fix-issues.prompt.md  identify-issues.prompt.md  implement.prompt.md  release.prompt.md
.github/tools/: sync-skills.py
.github/workflows/: ci.yml  publish.yml
.openclaw/: README.md
.openclaw/add-recipe/: SKILL.md
docs/: 01-vision-and-usecases.md  02-requirements.md  03-data-sources.md  04-entity-model.md  05-mcp-tools.md  06-architecture.md  07-user-interaction-requirements.md  index.md
setup/: README.md
tests/: conftest.py  dataset_factory.py  e2e_mcp_test.py  test_cli.py  test_computed.py  test_dashboard.py  test_dataset_factory.py  test_doctor.py  test_dossier_ops.py  test_etl.py  test_images.py  test_info.py  test_init.py  test_install_skills.py  test_log.py  test_markdown.py  test_mcp_server.py  test_normalise_ingredients.py  test_observability.py  test_parse_ingredient_line.py  test_parse_jsonld.py  test_query.py  test_recommend_easy.py  test_recommend_frequency.py  test_recommend_pantry.py  test_recommend_rotation.py  test_settings.py  test_smoke.py  test_snapshot.py  test_sources_bettybossi.py  test_sources_fooby.py  test_sources_migusto.py  test_sources_schweizerfleisch.py  test_sources_swissmilk.py  test_sync_skills.py  test_transform.py  test_validate.py  test_writer.py
(+96 files in other folders)
