[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[project]
name = "recipebrain"
version = "0.0.14"
description = "Personal Swiss recipe knowledge base with promotion-aware meal planning, exposed via MCP. Companion to cellarbrain."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["recipes", "mcp", "swiss", "meal-planning", "duckdb", "parquet", "personal-data"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "duckdb >= 1.0",
    "pyarrow >= 15",
    "tomli >= 2; python_version < '3.11'",
    "httpx >= 0.27",
    "selectolax >= 0.3",
    "extruct >= 0.16",
    "mcp >= 1.0",
    "Pillow >= 10",
]

[project.optional-dependencies]
dev = ["pytest >= 8", "pytest-cov", "ruff >= 0.5", "mypy >= 1.10"]
ocr = ["pytesseract"]
llm = ["openai >= 1.30"]

[project.scripts]
recipebrain = "recipebrain.cli:main"

[tool.setuptools.package-data]
recipebrain = ["skills/**/*.md", "skills/README.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["extruct.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PIL.*"]
ignore_missing_imports = true
